# SMB_REMOTE_GAME_DISK

./: .gitignore  BuildAll.bat  BuildSQLite.bat  CMakeLists.txt  DevEnvSetup.bat  QuickTest.bat  README.md  Windows部署指南.md  do_push.sh  push_to_github.sh
Core/Common/: Config.cpp  Config.h  CredentialStore.cpp  CredentialStore.h  Logger.cpp  Logger.h  Types.h
Core/GameLibrary/: CoverFetcher.cpp  CoverFetcher.h  GameDatabase.cpp  GameDatabase.h  GameScanner.cpp  GameScanner.h
Core/IPC/: JsonProtocol.cpp  JsonProtocol.h  PipeServer.cpp  PipeServer.h
Core/Launcher/: LaunchManager.cpp  LaunchManager.h  ProcessMonitor.cpp  ProcessMonitor.h
Core/SMB/: ConnectionPool.cpp  ConnectionPool.h  SMBClient.cpp  SMBClient.h
Core/Service/: MainService.cpp  MainService.h  MountTool.cpp  ServiceMain.cpp
Core/Stats/: StatsRecorder.cpp  StatsRecorder.h
Core/VirtualDisk/: FileCallbacks.cpp  FileCallbacks.h  MemoryCache.cpp  MemoryCache.h  VirtualDiskEngine.cpp  VirtualDiskEngine.h
GUI/RemoteGameHub.UI/: App.xaml  App.xaml.cs  RemoteGameHub.UI.csproj
GUI/RemoteGameHub.UI/Models/: GameModel.cs
GUI/RemoteGameHub.UI/Services/: GameLibraryService.cs  PipeClientService.cs
GUI/RemoteGameHub.UI/Themes/: DarkTheme.xaml
GUI/RemoteGameHub.UI/ViewModels/: MainViewModel.cs  RelayCommand.cs
GUI/RemoteGameHub.UI/Views/: AddGameView.xaml  AddGameView.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  StatsView.xaml  StatsView.xaml.cs
